--- a/scss/styles.css
+++ b/scss/styles.css
@@ -5,15 +5,16 @@ body {
 
 .search-bar-container {
   display: flex;
+  height: 70px;
   align-items: center;
   justify-content: center;
+  margin-bottom: 10px;
 }
 .search-bar-container .search-bar {
   text-align: center;
   width: 50%;
   border: 1px solid #d9d9d9;
   padding: 20px;
-  margin-bottom: 20px;
 }
 .search-bar-container .search-bar:focus {
   outline: none;
